2001-01-08  Ulrich Drepper  <drepper@redhat.com>

	* include/stdlib.h: Add __posix_openpt declaration.
	* stdlib/stdlib.h: Add posix_openpt declaration.
	* login/Versions: Add posix_openpt for GLIBC_2.2.1.
	* sysdeps/generic/getpt.c: Define posix_openpt.
	* sysdeps/unix/bsd/getpt.c: Likewise.
	* sysdeps/unix/sysv/linux/getpt.c: Likewise.

	* time/Makefile (tests): Add tst-mktime.
	* time/tst-mktime.c: New file.

	* posix/tst-dir.c (main): One more mkdir() test.

	* sysdeps/unix/sysv/linux/ia64/getpagesize.c (__getpagesize):
	Remove getpagesize syscall.  We assume that the pagesize is always
	determined from the auxiliary vector.

	* intl/dcigettext.c: Fix a few warnings.
	Patch by Bruno Haible <haible@ilog.fr>.

2001-01-08  Andreas Jaeger  <aj@suse.de>

	* io/test-lfs.c (do_test): Check lseek64 return for EINVAL.
	Reported by Joseph S. Myers <jsm28@cam.ac.uk>.

2001-01-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/segfault.c (install_handler): Check output file
	name with access().

	* resolv/res_query.c: Use simply getenv() for HOSTALIASES.
	* sysdeps/generic/unsecvars.h (UNSECURE_ENVVARS): Add HOSTALIASES.

	* sysdeps/generic/unsecvars.h (UNSECURE_ENVVARS): Add missing comma.

	* malloc/memusage.c (me): Use access() to determine whether we
	should write the output file or not.

	* libio/bits/stdio.h (printf): Define macro to map printf call to
	fprintf which gcc can optimize.
	* stdio-common/printf.c: Undefine printf.

2001-01-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/bits/byteswap.h (__bswap_64): Partly revert last
	patch.  We must use unsigned int for l member of union.

	* sysdeps/powerpc/elf/libc-start.c (__libc_start_main): Don't call
	_dl_aux_init for shared libraries.

	* sysdeps/unix/sysv/linux/glob64.c: Moved to ...
	* sysdeps/gnu/glob64.c: ...here.  New file.

2001-01-07  Ben Collins  <bcollins@debian.org>

	* manual/examples/longopt.c: Make the "struct option" a little